puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Facebook/content/Controllers/IntegrationsController.Facebook.cs.pp
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;

namespace $rootnamespace$.Controllers
{
	public partial class IntegrationsController
	{

	}
}
